--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,7 +35,7 @@ services:
   postgres:
     image: postgres:12.3-alpine
     container_name: ${APP_NAME}_postgres
-    restart: unless-stopped
+    restart: always
     ports:
       - "5433:5432"
     volumes:
