--- a/docker/.env-pro
+++ b/docker/.env-pro
@@ -15,6 +15,8 @@ DB_DATABASE=db_customers
 DB_USERNAME=root
 DB_PASSWORD=
 
+API_GOOGLE_MAPS_KEY=AIzaSyDEwbQnWi0u5e_q7n-PVqiOPIXMHR8VduY
+
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
